--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,18 @@ background-position: center;
     
 }
 
+.img3{
+
+   width: 400px;
+   
+
+ }
+ .img4{
+
+   width: 475px;
+   
+
+ }
 
   li{
   display: inline-block;
