--- a/css/main.css
+++ b/css/main.css
@@ -47,13 +47,16 @@ background-position: center;
 
 .img3{
 
-   width: 400px;
+   width: 40%;
+    height: auto;
+   
    
 
  }
  .img4{
 
-   width: 475px;
+   width: 48%;
+    height: auto;
    
 
  }
