--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ background-position: center;
 
 .img3{
 
-   width: 40%;
+   width: 50%;
    
    
    
@@ -56,7 +56,7 @@ background-position: center;
  }
  .img4{
 
-   width: 48%;
+   width: 58%;
    
    
 
@@ -83,26 +83,45 @@ background-position: center;
 
 
 
-.menu {
+nav{
    
    
-   color: #ffffff;
+  
    background-image: url(/img/IMEPAC-EAD-tecnologia-em-analise-e-desenvolvimento-de-sistemas.jpeg);
    font-size: large;
-  
    border: solid #20232a;
    font-family: 'ubuntu', sans-serif;
    background-repeat: no-repeat;
    letter-spacing: 10px;
-   position: -webkit-sticky; /* Necessário para funcionar no Safari */
-   position: sticky;
-   top: 0;
+  
+   position: relative;
+  
    
    
    
    
    
 }
+
+nav a::after{
+   content: '';
+   width: 0%;
+   height: 1px;
+  
+   position: absolute;
+   bottom:  0;
+   left: 0;
+  transition: 0.5s ease-in-out;
+}
+
+nav a:hover::after{
+   width: 100%;
+   background-color: #fff467;
+  
+}
+
+
+
 .center {
    
    text-align:center ;
@@ -159,13 +178,9 @@ a{
    
 }
 
-a:hover{
-   background-color: #ffffff;
-   color: #0f1523;
-   transform: scaleY(1);
-   transform-origin: top;
+
  
-}
+
 button{
  display: inline-block;
  justify-content: center;
