--- a/css/main.css
+++ b/css/main.css
@@ -53,11 +53,10 @@ background-position: center;
    border-radius: 80%;
 }
 .img-redes:hover{
-   -moz-transform: scale(1.2);
-  -webkit-transform: scale(1.2);
+   
   transform: scale(1.2);
-  box-shadow: #fff467 0px 0px 20px;
- 
+  box-shadow: #fff467 0px 0px 4px;
+ background-color: #ffffff;
 }
 
  .img-foto{
@@ -77,17 +76,7 @@ background-position: center;
     display: inline-block;
     
 }
-.img2:hover{
-   -moz-transform: scale(0.9);
-  -webkit-transform: scale(0.9);
-  transform: scale(0.9);
-  box-shadow: #fff467 0px 0px 20px;
- 
-   
- 
- 
- 
-}
+
 
 .img3{
 
@@ -229,7 +218,7 @@ a{
    
 }
 input,textarea{
-   border: 1px solid #ffffff;
+   border: 1px  solid #ffffff;
    border-radius: 5px;
    background-color: transparent;
    padding: 1%;
@@ -239,6 +228,7 @@ input,textarea{
    font-family: 'ubuntu', sans-serif;
    transition: .5s ease-in-out;
 }
+
 
  
 
@@ -266,18 +256,12 @@ button{
 }
 
 button:hover{
-  transition-delay: 0.8s;
-  animation: animate1 0.8s steps(10) forwards;
- 
+  color: #0f1523;
+ background-color: #fff467;
+ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-@keyframes animate1{
-   0%{
-     background-position-y: 0;
-     color:blue;
-   }
-   100%{
-     background-position-y: -480px;
-       color: #20232a;
-       background-color: #fff467;
-   }
- }
+button:active{
+  color: #fff467;
+ background-color: #20232a;
+box-shadow: #fff467 0px 5px 4px;
+}
