--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,8 @@
 
    .img2 {
       width: 100%;
-      height: auto;
-      max-width: 100%;
-      -moz-transition: all 0.5s;
-     -webkit-transition: all 0.5s;
-     transition: all 0.5s;
+      height: 100%;
+      
    }
 
    img2:hover{
@@ -21,10 +18,58 @@
 }
 
    
+.fa-moon {
+   color: #f1c40f;
+ }
+ 
+ .fa-sun {
+   color: #f39c12;
+ }
 
-
-
-
+ .checkbox {
+   opacity: 0;
+   position: absolute;
+ }
+ 
+ .label {
+   background-color: #111;
+   border-radius: 50px;
+   cursor: pointer;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+ 
+   padding: 5px;
+   position: relative;
+   height: 26px;
+   width: 50px;
+   transform: scale(1.5);
+ 
+ }
+ 
+ 
+ .label .ball {
+   background-color: #fff;
+   border-radius: 50%;
+   position: absolute;
+   top: 2px;
+   left: 2px;
+   height: 22px;
+   width: 22px;
+   transform: translateX(0px);
+   transition: transform 0.2s linear;
+ }
+ 
+ 
+ 
+ .fa-moon {
+   color: #f1c40f;
+ }
+ 
+ .fa-sun {
+   color: #f39c12;
+ }
+ 
 html{
    scroll-behavior: smooth;
   
@@ -83,7 +128,7 @@ background-position: center;
 
 }
 #btndark{
-   background-color: gray;
+  
    float : right;
    border: none;
    border-radius: 5px;
@@ -106,7 +151,7 @@ background-position: center;
   
 }
 #btnlyth{
-background-color: rgb(247, 173, 226);
+
 float : left;
 border: none;
 border-radius: 5px;
@@ -252,7 +297,7 @@ h3{
 
 h4 {
    text-transform: uppercase;
-   color: #ffffff;
+   color: #c87271;
    letter-spacing: 4px; 
   
    
