--- a/css/main.css
+++ b/css/main.css
@@ -77,17 +77,13 @@ background-position: center;
 .icones{
    width: 10%;
    border: 1px solid #fff467;
+   color: #ffffff;
    border-radius: 12px;
    height: auto;
    padding: 10px;
    margin: 20px;
 }
-.linguagens{
-   background-repeat: no-repeat;
-   background-position: center;
-   
-   
-}
+
  .img-foto{
   width: 25%;
   height: auto;
@@ -233,6 +229,8 @@ h4 {
    text-transform: uppercase;
    color: #ffffff;
    letter-spacing: 4px; 
+   margin-left: 0.1rem;
+   margin-right: 0.1rem;
   
    
 
