--- a/css/main.css
+++ b/css/main.css
@@ -1,200 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&family=Ubuntu+Mono:ital@0;1&display=swap');
-
-
-ul{
-   display: none;
-}
-@media screen and (min-width: 750px) {
-
-
-   .img2 {
-      width: 100%;
-      height: auto;
-      
+@media (max-width: 768px) {
+   .container {
+     flex-direction: column;
    }
-
-   img2:hover{
-      -moz-transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-  }
-  ul{
-   display: block;
-}
-#menu{
-   display: none;
-}
-}
-
-   
-
-#menu{
-   color: #ffffff;
-   background-color: #fff467;
-   float:right;
-   width: 3rem;
-   margin-right: 1%;
-   border-radius: 15%;
-}
-
- #menu:hover{
-   background-color: #ffffff;
-   color: #fff467;
-  
-   cursor: pointer;
  }
- 
-html{
-   scroll-behavior: smooth;
-  
 
-}
+
+.break-line {
+   white-space: pre-line;
+ }
+
 
 body{
-margin: 1%;
-padding: 0%;
-font-family: 'Poppins', sans-serif;
-font-family: 'Ubuntu Mono', monospace;
-background-color: #20232a;
-
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-
-}
-  
-.projetos{
-   margin-top: 3rem;
-   margin-bottom: 3rem;
-   
-   text-align:center ;
-  background-image: url(/img/IMEPAC-EAD-tecnologia-em-analise-e-desenvolvimento-de-sistemas.jpeg);
-  background-position: center ;
-  background-attachment: fixed;
-  background-size: cover;
+   background-color: #141021;
 }
 
-.img-redes{
-   width: 60px;
+
+
+
+.img-foto{
+   width: 20%;
    height: auto;
-   border-radius: 80%;
-}
-
-
-.icones{
-   width: 10%;
-   border: 1px solid #fff467;
-   color: #ffffff;
-   border-radius: 12px;
-   height: auto;
-   padding: 10px;
-   margin: 20px;
-}
-
- .img-foto{
-  width: 25%;
-  height: auto;
- 
- 
-   border-radius: 50%;
+   margin: 30px; 
   
-
-}
-
-
-
-
-
-
-.img2{
-   width: 35%;
-  
-  
-    
-}
-
-
-.img3{
-
-   width: 50%;
-   
-
-   
-   
-
- }
- .img4{
-
-   width: 58%;
-   
-   
-
- }
-
-  li{
-  display: inline-block;
-  
-   list-style: none;
-   gap: 10rem;
-   transition: .5s ease-in-out;
-   
+    border-radius: 50%;
   
 }
-
- i:hover{
-  
-   cursor: pointer;
-   transform: scaleY(1);
-   transform-origin: top;
- 
-   
-  
- }
-
-
-
-
-nav{
-   
-   
-   
-   background-image: url(/img/IMEPAC-EAD-tecnologia-em-analise-e-desenvolvimento-de-sistemas.jpeg);
-   font-size: large;
-  
-   border: solid #20232a;
-   font-family: 'ubuntu', sans-serif;
-   background-repeat: no-repeat;
-   letter-spacing: 10px;
-  
-   position: -webkit-sticky; /* Necessário para funcionar no Safari */
-   position:  sticky; /* Este é o sufixo correto */
-   top: 0;
-   
-   
-   
-   
-   
-}
-
-nav a::after{
-   content: '';
-   width: 0%;
-   height: 1px;
-  
-   position: absolute;
-   bottom:  0;
-   left: 0;
-  transition: 0.5s;
-
-}
-
-nav a:hover::after{
-   width: 100%;
-   background-color: #fff467;
-   text-decoration-color: #0f1523;
-}
-  
-
 
 .center {
    
@@ -204,95 +34,83 @@ nav a:hover::after{
    
  }
 
- footer{
-   
-   background-color: transparent;
+ html{
+   scroll-behavior: smooth;
+  
+
+}
+
+/* Estilo geral para o nav */
+.nav {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 10px; /* Ajuste o preenchimento conforme necessário */
  }
-
-
-h1{
-font-size: large;
-text-transform: uppercase;
-letter-spacing:4px ;
-color: #ffffff;
-
-
-}
-h2{
-   text-transform: uppercase;
-  
-   color: #fff467;
-   letter-spacing: 4px;
-}
-
-h3{
-   text-transform: uppercase;
-   color: #fff467;
-   letter-spacing: 4px;
-   cursor: default;
-}
-
-h4 {
-   text-transform: uppercase;
-   color: #ffffff;
-   letter-spacing: 4px; 
-   margin-left: 0.1rem;
-   margin-right: 0.1rem;
-  
-   
-
-}
-
-
-
-a{
+ 
+ /* Estilo para a lista de navegação */
+ .nav-list {
+   list-style: none;
+   margin: 0;
+   padding: 0;
+   display: flex;
+ }
+ 
+ .nav-list li {
+   margin-right: 20px; /* Espaçamento entre os itens */
+ }
+ 
+ .nav-list a {
    text-decoration: none;
-   color: #fff467;
-   transition: .5s ease-in-out;
-   
-}
-input,textarea{
-   border: 1px  solid #ffffff;
-   border-radius: 5px;
-   background-color: transparent;
-   padding: 1%;
-   width: 80%;
-   color: #fff467;
-   font-size: large;
-   font-family: 'ubuntu', sans-serif;
-   transition: .5s ease-in-out;
-}
-
-
+   color: aliceblue; /* Cor do texto */
+ }
+ 
+ /* Estilo para a imagem do logo */
+ .logo {
+   height: 40px; /* Ajuste o tamanho conforme necessário */
+ }
  
 
-button{
- display: inline-block;
- justify-content: center;
- text-decoration: none;
- position: center;
- background-color: #4d4d4d;
+h1{
+   color: aliceblue;
+}
+h2{
+   color: aliceblue;
   
-  
-
-  font-family: 'ubuntu', sans-serif;
-  font-size: 21px;
-  line-height: 28px;
-  font-weight: 300;
-  
-  color: #ffffff;
-  text-align: center;
-  
-
-  text-decoration: none;
-  cursor: pointer;
-
-  transition: .15s;
+}
+a{
+   color: aliceblue;
 }
 
-button:hover{
-  color: #4d4d4d;
- background-color: #ffffff;
- font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+
+
+
+
+
+
+/* CSS para a animação de máquina de escrever */
+@keyframes type {
+   from {
+       width: 0;
+   }
+   to {
+       width: 100%;
+   }
 }
 
+h1 {
+   overflow: hidden; /* Esconde o texto que ainda não foi "digitado" */
+   border-right: .10em solid black; /* Simula o cursor da máquina de escrever */
+   white-space: nowrap; /* Impede que o texto quebre para a linha seguinte */
+   animation: type 4s steps(40, end), blink-caret .75s step-end infinite;
+}
+
+@keyframes blink-caret {
+   from, to {
+       border-color: transparent;
+   }
+   50% {
+       border-color: whitesmoke;
+   }
+}
