--- a/css/main.css
+++ b/css/main.css
@@ -1,116 +1,113 @@
-@media (max-width: 768px) {
-   .container {
-     flex-direction: column;
-   }
- }
-
-
-.break-line {
-   white-space: pre-line;
- }
-
-
-body{
-   background-color: #141021;
+@media (max-width: 400px) {
+    .container {
+        flex-direction: column;
+    }
 }
 
 
 
+body {
+    background-color: #141021;
+}
 
-.img-foto{
-   width: 20%;
-   height: auto;
-   margin: 30px; 
-  
+.img-foto {
+    width: 20%;
+    height: auto;
+    margin: 30px;
+
     border-radius: 50%;
-  
 }
 
 .center {
-   
-   text-align:center ;
-   justify-content: center;
-   align-items: center;
-   
- }
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
 
- html{
-   scroll-behavior: smooth;
-  
-
+html {
+    scroll-behavior: smooth;
 }
 
 /* Estilo geral para o nav */
 .nav {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   padding: 10px; /* Ajuste o preenchimento conforme necessário */
- }
- 
- /* Estilo para a lista de navegação */
- .nav-list {
-   list-style: none;
-   margin: 0;
-   padding: 0;
-   display: flex;
- }
- 
- .nav-list li {
-   margin-right: 20px; /* Espaçamento entre os itens */
- }
- 
- .nav-list a {
-   text-decoration: none;
-   color: aliceblue; /* Cor do texto */
- }
- 
- /* Estilo para a imagem do logo */
- .logo {
-   height: 40px; /* Ajuste o tamanho conforme necessário */
- }
- 
-
-h1{
-   color: aliceblue;
-}
-h2{
-   color: aliceblue;
-  
-}
-a{
-   color: aliceblue;
+    background-color:#110e2e;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px; /* Ajuste o preenchimento conforme necessário */
 }
 
+/* Estilo para a lista de navegação */
+.nav-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
 
+.nav-list li {
+    margin-right: 20px; /* Espaçamento entre os itens */
+}
 
+.nav-list a {
+    text-decoration: none;
+    color: aliceblue; /* Cor do texto */
+}
 
+/* Estilo para a imagem do logo */
+.logo {
+    height: 40px; /* Ajuste o tamanho conforme necessário */
+}
 
-
-
-
-/* CSS para a animação de máquina de escrever */
-@keyframes type {
-   from {
-       width: 0;
-   }
-   to {
-       width: 100%;
-   }
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2%; /* Espaçamento entre os cards */
+    justify-content: center;
+    padding: 20px;
 }
 
 h1 {
-   overflow: hidden; /* Esconde o texto que ainda não foi "digitado" */
-   border-right: .10em solid black; /* Simula o cursor da máquina de escrever */
-   white-space: nowrap; /* Impede que o texto quebre para a linha seguinte */
-   animation: type 4s steps(40, end), blink-caret .75s step-end infinite;
+    color: aliceblue;
+}
+h2 {
+    color: aliceblue;
+}
+a {
+    color: aliceblue;
+}
+.card img {
+    max-width: 100%;
+    border-radius: 8px;
 }
 
-@keyframes blink-caret {
-   from, to {
-       border-color: transparent;
-   }
-   50% {
-       border-color: whitesmoke;
-   }
+.card p {
+    margin: 10px 0 0;
+    color: #333;
+}
+
+
+
+.card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 200px;
+    text-align: center;
+    padding: 10px;
+}
+.leJoltZoom span {
+    animation-name: leJoltZoom;
+}
+@keyframes leJoltZoom {
+    10% {
+        font-size: 140%;
+    }
+    40% {
+        font-size: 80%;
+    }
+    100% {
+        font-size: 100%;
+    }
 }
