--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ html {
 
 /* Estilo para a imagem do logo */
 .logo {
-    height: 40px; /* Ajuste o tamanho conforme necessário */
+    height: 40%; /* Ajuste o tamanho conforme necessário */
 }
 
 .container {
@@ -73,8 +73,10 @@ h1 {
 h2 {
     color: aliceblue;
 }
-a {
-    color: aliceblue;
+
+
+a,p{
+    color: #110e2e;
 }
 .card img {
     max-width: 100%;
@@ -97,17 +99,8 @@ a {
     text-align: center;
     padding: 10px;
 }
-.leJoltZoom span {
-    animation-name: leJoltZoom;
-}
-@keyframes leJoltZoom {
-    10% {
-        font-size: 140%;
-    }
-    40% {
-        font-size: 80%;
-    }
-    100% {
-        font-size: 100%;
-    }
+
+.contatos{
+    margin-top: 8rem;
+   
 }
